Disabling after regions changed on 2022-07-19

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
 
 name: main
 
-on:
-  push:
-  schedule:
-    - cron: "10,40 8-18 * * *"
+# Disabled since 2022-07-19 - KZ regions changed, breaking script
+on: []
+#on:
+#  push:
+#  schedule:
+#    - cron: "10,40 8-18 * * *"
 
 jobs:
   poll_transform:
